Fixed prefsimg causing horizontal scroll

--- a/scripts/beyond.css
+++ b/scripts/beyond.css
@@ -220,8 +220,8 @@ span label {
 }
 
 .ob-prefs-bg {
-	left: 111px;
-	top: 12px;
+	left: 109px;
+	top: 13px;
 	cursor: pointer;
 }
 
